# COP3503C-Project-3

./: CMakeLists.txt  README.md
files/: config.cfg  leaderboard.txt
src/: README.md  main.cpp
